# thingy

./: Cargo.toml  README.md
resources/: log4rs.yaml  thing.yaml
src/: main.rs
