[package]
name = "device"
version = "0.1.0"
authors = ["Thomas Sullivan <thomas.sullivan@protedyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal_scanner = { path = "../signal_scanner" }
signal_device = { path = "../signal_device" }
applied_device = { path = "../applied_device" }
log = "0.4.14"
log4rs = "1.0.0"
